2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-prefs-manager.h: removed unused #define 
	GPM_DEFAULT_SAVE_ENCODING

	* gedit-ui.xml: removed unused hidden Debug menu

2004-02-10  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* dialogs/gedit-preferences-dialog.c:
	(setup_syntax_highlighting_page): Don't highlight single column lists.

2004-02-06  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am:
	  dialogs/Makefile.am:
	  recent-files/Makefile.am:
	use $(WARN_CFLAGS) and $(DISABLE_DEPRECATED_CFLAGS)

2004-02-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file-selector-utils.c: handle response
	GTK_RESPONSE_DELETE_EVENT like a cancel. (#133851)

2004-01-15  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.3 released ]

2004-01-13  Paolo Maggi  <paolo.maggi@polito.it> 

	* gedit-view.[ch] (gedit_view_set_editable): new function

	* gedit-menus.[ch] (gedit_menus_all_sensible_verbs)
	(gedit_menus_loading_sensible_verbs)
	(gedit_menus_printing_sensible_verbs): new sets of verbs

	* gedit-mdi.[ch] (state_changed): new signal
	(gedit_mdi_get_state)(gedit_mdi_set_state): new methods

	* gedit-mdi.c (update_ui_according_to_state): new function.
	(gedit_mdi_add_open_button): returns the button
	(gedit_mdi_remove_views_handler): doesn't remove view if state
	is different from GEDIT_STATE_NORMAL
	(gedit_mdi_set_active_window_verbs_sensitivity): take care of
	state

	* gedit-mdi-child.c (gedit_state_changed_handler): new function
	(menu_show): disable menu items if state is different from normal

	* gedit-file.c (grab_mouse)(ungrab_mouse): removed. 
	Use gedit_mdi_set_state to set the state while loading.

2004-01-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/bonobo-mdi.c: handle don't start drag&drop when
	double-clicking on a tab (fixes 129994).

	* gedit/gedit-file.c: fix a compilation warning.

2004-01-12  Paolo Maggi  <paolo.maggi@polito.it> 

	Implemented async loading of remote files.

	New Close All dialog (thanks to Paolo Borelli for his
	help)
