@@ -1,3 +1,7 @@
+2004-02-13  Paolo Maggi  <paolo.maggi@polit.it>
+
+	* recent-files/*: Update to latest libegg recent-files code
+
 2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* gedit-prefs-manager.h: removed unused #define 
